--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-4.19MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
-  - {name: 🇺🇸 美国-3.31MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-651.4KB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.83MB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-11.47MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-3.10MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-1.54MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
-  - {name: 匈牙利-1.85MB/s(Youtube:不良林), server: 185.225.69.134, port: 45081, type: vmess, uuid: 3c3bfd75-dc30-4e76-8940-47e1137e21f9, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.07MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.36MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: fb61d738-ef95-446d-9004-c93a1a975cad, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇺🇸 美国-5.17MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.87MB/s(Youtube:不良林), server: iplc.wenzhoucloud.trojanv2ray.online, port: 20005, type: vmess, uuid: 820aa5e5-4df6-4aaa-90a5-1cf80e32f238, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /iqiyi, ws-headers: {Host: iplc.wenzhoucloud.trojanv2ray.online}}
+  - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: v05.ssrsub.com, port: 153, type: vmess, uuid: fb61d738-ef95-446d-9004-c93a1a975cad, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v05.ssrsub.com}}
+  - {name: 🇺🇸 美国-4.86MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.79MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-341.0KB/s(Youtube:不良林), server: 626sg.ok365.cyou, port: 443, type: trojan, password: ef6c7fc6-6551-472b-921c-8f28606785de, sni: 626sg.ok365.cyou, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-3.97MB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
+  - {name: 🇯🇵 日本-5.17MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.94MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-4.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-651.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.54MB/s(Youtube:不良林)
-      - 匈牙利-1.85MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-341.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-4.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-651.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.54MB/s(Youtube:不良林)
-      - 匈牙利-1.85MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-341.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-4.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-651.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.54MB/s(Youtube:不良林)
-      - 匈牙利-1.85MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-341.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-341.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-4.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-651.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.54MB/s(Youtube:不良林)
-      - 匈牙利-1.85MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-341.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-4.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-651.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.54MB/s(Youtube:不良林)
-      - 匈牙利-1.85MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-341.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-4.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-651.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.54MB/s(Youtube:不良林)
-      - 匈牙利-1.85MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-341.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-4.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-651.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.54MB/s(Youtube:不良林)
-      - 匈牙利-1.85MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-341.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
