--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.36MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: fb61d738-ef95-446d-9004-c93a1a975cad, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
-  - {name: 🇺🇸 美国-5.17MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.87MB/s(Youtube:不良林), server: iplc.wenzhoucloud.trojanv2ray.online, port: 20005, type: vmess, uuid: 820aa5e5-4df6-4aaa-90a5-1cf80e32f238, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /iqiyi, ws-headers: {Host: iplc.wenzhoucloud.trojanv2ray.online}}
-  - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: v05.ssrsub.com, port: 153, type: vmess, uuid: fb61d738-ef95-446d-9004-c93a1a975cad, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v05.ssrsub.com}}
+  - {name: 🇬🇧 英国-3.10MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.86MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.79MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-341.0KB/s(Youtube:不良林), server: 626sg.ok365.cyou, port: 443, type: trojan, password: ef6c7fc6-6551-472b-921c-8f28606785de, sni: 626sg.ok365.cyou, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-3.97MB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
+  - {name: 🇺🇸 美国-336.9KB/s(Youtube:不良林), server: 625us.ok365.cyou, port: 443, type: trojan, password: ef6c7fc6-6551-472b-921c-8f28606785de, sni: 625us.ok365.cyou, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.07MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-8.42MB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇯🇵 日本-5.17MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.94MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-2.98MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
+  - {name: 🇨🇳 中国-430.7KB/s(Youtube:不良林), server: data-hk-v2.shwjfkw.cn, port: 50205, type: vmess, uuid: b1478e24-4916-3abe-8f17-15931012ecbe, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: data-hk-v2.shwjfkw.cn}}
+  - {name: 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
-      - 🇭🇰 香港-341.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.42MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-430.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
-      - 🇭🇰 香港-341.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.42MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-430.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
-      - 🇭🇰 香港-341.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.42MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-430.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-341.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
-      - 🇭🇰 香港-341.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.42MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-430.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
-      - 🇭🇰 香港-341.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.42MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-430.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
-      - 🇭🇰 香港-341.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.42MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-430.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
-      - 🇭🇰 香港-341.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.42MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.17MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-430.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.27MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
